bin/aho
In file included from StateTrans.cc:1:0:
StateTrans.h:10:25: error: ‘string’ does not name a type
  bool setStateNum(const string &str);
                         ^
StateTrans.h:10:33: error: ISO C++ forbids declaration of ‘str’ with no type [-fpermissive]
  bool setStateNum(const string &str);
                                 ^
StateTrans.h:12:23: error: ‘string’ does not name a type
  bool setAction(const string &action);
                       ^
StateTrans.h:12:31: error: ISO C++ forbids declaration of ‘action’ with no type [-fpermissive]
  bool setAction(const string &action);
                               ^
StateTrans.h:13:27: error: ‘string’ does not name a type
  bool setResolution(const string &word);
                           ^
StateTrans.h:13:35: error: ISO C++ forbids declaration of ‘word’ with no type [-fpermissive]
  bool setResolution(const string &word);
                                   ^
StateTrans.h:17:9: error: ‘string’ was not declared in this scope
  vector<string> m_actions;
         ^
StateTrans.h:17:15: error: template argument 1 is invalid
  vector<string> m_actions;
               ^
StateTrans.h:17:15: error: template argument 2 is invalid
StateTrans.cc:9:6: error: prototype for ‘bool StateTrans::setStateNum(const string&)’ does not match any in class ‘StateTrans’
 bool StateTrans::setStateNum(const string &str){
      ^
In file included from StateTrans.cc:1:0:
StateTrans.h:10:7: error: candidate is: bool StateTrans::setStateNum(const int&)
  bool setStateNum(const string &str);
       ^
StateTrans.cc:16:6: error: prototype for ‘bool StateTrans::setAction(const string&)’ does not match any in class ‘StateTrans’
 bool StateTrans::setAction(const string &action){
      ^
In file included from StateTrans.cc:1:0:
StateTrans.h:12:7: error: candidate is: bool StateTrans::setAction(const int&)
  bool setAction(const string &action);
       ^
StateTrans.cc:21:6: error: prototype for ‘bool StateTrans::setResolution(const string&)’ does not match any in class ‘StateTrans’
 bool StateTrans::setResolution(const string &word){
      ^
In file included from StateTrans.cc:1:0:
StateTrans.h:13:7: error: candidate is: bool StateTrans::setResolution(const int&)
  bool setResolution(const string &word);
       ^
StateTrans.cc: In member function ‘void StateTrans::status()’:
StateTrans.cc:29:23: error: request for member ‘begin’ in ‘((StateTrans*)this)->StateTrans::m_actions’, which is of non-class type ‘int’
  for(auto i=m_actions.begin();i<m_actions.end();i++){
                       ^
StateTrans.cc:29:43: error: request for member ‘end’ in ‘((StateTrans*)this)->StateTrans::m_actions’, which is of non-class type ‘int’
  for(auto i=m_actions.begin();i<m_actions.end();i++){
                                           ^
make: *** [StateTrans.o] Error 1
